2006-07-17  Richard Stallman  <rms@gnu.org>

	* image-mode.el (tar-superior-buffer, archive-superior-buffer):
	Add defvars to silence warnings.

2006-07-17  Chong Yidong  <cyd@stupidchicken.com>

	* progmodes/compile.el (compilation-mode-font-lock-keywords):
	Don't highlight "Compiling file" messages as error.

	* dired-aux.el (dired-compress-file): Confirm again if gzipped
	file already exists.

2006-07-16  Thien-Thi Nguyen  <ttn@gnu.org>

	* find-file.el (ff-special-constructs): Doc fix.  Also, for C/C++
	entry, don't assign to free var; simply return the extracted filename.
	(ff-treat-as-special): Incorporate common preamble from callers.
	(ff-other-file-name, ff-find-the-other-file):
	Update call to ff-treat-as-special.

	* progmodes/ada-mode.el (ada-mode): Rewrite ff-special-constructs init.

2006-07-16  Mathias Dahl  <mathias.dahl@gmail.com>

	* tumme.el (tumme-get-comment): Fix bug.

2006-07-16  Stefan Monnier  <monnier@iro.umontreal.ca>

	* files.el: Remove spurious * in docstrings.

2006-07-14  Ken Manheimer  <ken.manheimer@gmail.com>

	* allout.el (allout-run-unit-tests-on-load): Rectify docstring
	grammar.
	(allout-beginning-of-current-line): Beware beginning of buffer.
	Also, a comment is simplified.
	(allout-hotspot-key-handler): Only set allout-post-goto-bullet
	when appropriate.  (This fix enables use for other than
	bullet-hotspot operation.)
	(allout-hide-current-subtree): While escalating to sibling-close,
	make sure to situate on a topic.

2006-07-14  Kim F. Storm  <storm@cua.dk>

	* emulation/cua-base.el (cua-delete-selection)
	(cua-toggle-set-mark): New defcustoms.
	(cua-rectangle-modifier-key): Add `alt' modifier.
	(cua-replace-region): Don't delete if cua-delete-selection is nil.
	(cua-set-mark): Don't clear mark if cua-toggle-set-mark is nil.
	Suggested by Klaus Zeitler <kzeitler@lucent.com>.

	* emulation/cua-rect.el (cua-help-for-rectangle): Add `alt' modifier.

2006-07-14  Ken Manheimer  <ken.manheimer@gmail.com>
