@@ -1,3 +1,8 @@
+2006-07-17  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* progmodes/sh-script.el (sh-quoted-subshell): Don't match escaped `.
+	Use `cond', push', and `dolist'.
+
 2006-07-17  Richard Stallman  <rms@gnu.org>
 
 	* image-mode.el (tar-superior-buffer, archive-superior-buffer):
